# olegmisc

./: .base_aliases  .bash_aliases  .bash_login  .bash_profile  .bashenv  .bashrc  .gdbinit  .gitignore  .screenrc  .tkdiffrc  .viminfo  .vimrc  .xsession  .zshrc  ProjectHome.md
.Isis/: IsisPreferences
.claude/: CLAUDE.md  settings.json
.copilot/: copilot-instructions.md
.emacs.d/: abbreviations-my.el  c++-my.el  conv_c++_to_matlab.pl  custom.el  emacs-lisp-my.el  latex-my.el  oleg-latex-toolbar.el  perl-my.el  right_part_cpp.pl  shell-script-my.el
.fvwm/: .fvwm2rc  ThingsToTry  abc.decor  button-taskbar.fvwm  celtic.decor  default.decor  goldleaf.decor  iconbox.fvwm  icons-all  icons-used  icons.fvwm  menuB2.fvwm  menuB3.fvwm  metal.decor  pager.fvwm  plain.decor  purpsilver.decor  redgold.decor  starry.decor
.fzf/: .fzf.bash  .fzf.zsh
.gemini/: GEMINI.md
.ssh/: config
.vim/: .netrwhist
.xemacs/: abbreviations-my.el  abbreviations-my.el_bk  autoinsert-my.el  autoinsert-my.elc  c++-my.el  c++-my.elc  cua-mode.el  custom.el  custom.elc  emacs-lisp-my.elc  follow-mouse.el  format_fun_dec.pl  fortran-my.elc  fortran90-my.el  global-my.el  global-my.elc  header.cc  header.cpp  header.elc  header.py  header.sh  header.tex  html-my.el  html-my.elc  htmlize.el  htmlize.elc  indent_block.pl  init.el  init.elc  java-my.el  latex-my.el  left_part_cpp.pl  longlines.el  longlines.elc  mail-my.elc  matlab-my.el  matlab.el  matlab.elc  matlab_C++_reorder_args.pl  mouse-focus.el  (+19 more)
cpp/: Makefile  best_path.m  (+12 more)
projects/vtk_trans/: CMakeLists.txt  test_vtk_trans.cc
(+846 files in other folders)
